# QVorbis

./: .gitignore  CMakeLists.txt  QVorbis.cpp  QVorbis.hpp  demo.cpp  readme.md
